# spelling-bee-solution

./: README.md  pyproject.toml
data/: english_words_filtered.txt
dummy_input/: dummy_input.txt
outputs/: outputs_abdeglre.txt  outputs_aeimnsxx.txt
scripts/: filter_words.py  get_engilsh_words.py
src/: solve_spelling_bee.py  words.py
