[tool.poetry]
name = "spelling_bee"
version = "0.1.0"
description = "Solver for NYT style spelling bee game"
authors = ["Bipin Lekhak"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
ipython = "^7.27.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 79


[tool.black]
line-length = 79
target-version = ['py38']
